app/src/main/java/com/example/fitnesstracker/presentation/auth/error/InvalidCredentials.java
package com.example.fitnesstracker.presentation.auth.error;

public final class InvalidCredentials implements AuthError {}
